--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^17.0.2",
+    "react-magnifier": "^3.0.4",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
